package application;

abstract class PizzaFactory {
	public abstract Pizza creer(String name);
}
