package application;

public class PizzaFromageStyleBrest extends Pizza {
	public PizzaFromageStyleBrest() {
		super.nom = "sauce style Brest et fromage";
		super.pate = "style Brest";
		super.sauce = "";
		super.garnitures.add("Parmigiano reggiano rapé");
	}
}
