package application;

public class PizzaFromageStyleStrasbourg extends Pizza {
	public PizzaFromageStyleStrasbourg() {
		super.nom = "pâte style Strasbourg et fromage";
		super.pate = "style Strasbourg";
		super.sauce = "";
		super.garnitures.add("Mozarella en lamelles");
	}
}
