package application;

public class PizzaGrecqueStyleBrest extends Pizza {
	public PizzaGrecqueStyleBrest() {
		super.nom = "pâte style Brest et grecque";
		super.pate = "style Strasbourg";
		super.sauce = "";
		super.garnitures.add("Champignons à l'athénienne");
	}
}
