package application;

public class PizzaGrecqueStyleStrasbourg extends Pizza {
	public PizzaGrecqueStyleStrasbourg() {
		super.nom = "pâte style Strasbourg et grecque";
		super.pate = "style Strasbourg";
		super.sauce = "";
		super.garnitures.add("Pommes de terre citron menthe");
	}
}
