package application;

public class PizzaPoivronsStyleBrest extends Pizza {
	public PizzaPoivronsStyleBrest() {
		super.nom = "pâte style Brest et poivrons";
		super.pate = "style Strasbourg";
		super.sauce = "";
		super.garnitures.add("poivron rouge");
	}
}
