package application;

public class PizzaPoivronsStyleStrasbourg extends Pizza {
	public PizzaPoivronsStyleStrasbourg() {
		super.nom = "pâte style Strasbourg et poivron";
		super.pate = "style Strasbourg";
		super.sauce = "";
		super.garnitures.add("poivron vert");
	}
}
